Fixed image overlappings and margin errors

--- a/index.css
+++ b/index.css
@@ -216,7 +216,7 @@ body{
 }
 
 #project_img {
-    width:389px;
+    width:auto;
     height:90px;
     border-radius:5px;
     background-size:cover !important;
